# 2d-physicsengine

./: .gitignore  CMakeLists.txt  build-wasm.ps1  build.ps1
.github/workflows/: build_and_test.yml  numerical_validation.yml
benchmarks/: fluid_benchmark.cpp
docs/: collision-filtering.md  contact-manifolds.md  contact-solver.md  fixed-timestep.md  fluid-boundaries.md  fluid-particles.md  fluid-performance.md  fluid-rigid-coupling.md  fluid-validation-plan.md  numerical-validation.md  particles.md  simulation-configuration.md  simulation-statistics.md  sph-kernels.md  wcsph-solver.md  webassembly.md
examples/wasm-smoke/: index.html  smoke-test.cjs  smoke.js
include/: engine.h  physics_engine.h
include/physics/core/: fixed_step_runner.h  force_generator.h  material.h  rigidbody.h  shape.h  simulation_config.h  simulation_statistics.h  types.h  world.h
include/physics/core/collisions/: collision_dispatcher.h  collision_listener.h  collision_manifold.h  collision_resolver.h
include/physics/core/collisions/broad_phase/: aabb.h  ibroad_phase.h  sweep_and_prune.h  uniform_grid.h
include/physics/core/collisions/narrow_phase/: collision_circle_circle.h  collision_circle_polygon.h  collision_circle_rectangle.h  collision_polygon_polygon.h  collision_rectangle_rectangle.h
include/physics/core/fluids/: coupled_fluid_simulation.h  fluid_boundary.h  fluid_particle.h  fluid_particle_spatial_grid.h  fluid_rigid_coupler.h  sph_kernels.h  wcsph_solver.h
include/physics/core/forces/: drag.h  gravity.h
include/physics/core/particles/: particle.h  particle_spatial_grid.h  particle_system.h
include/physics/math/: matrix2x2.h  vector2.h
install/include/PhysicsEngine/: force_generator.h  gravity.h  rigidbody.h  vector2.h
src/: engine.cpp  physics_engine.cpp
src/physics/core/: fixed_step_runner.cpp  rigidbody.cpp  simulation_config.cpp  world.cpp
src/physics/core/collisions/: collision_dispatcher.cpp  collision_resolver.cpp
src/physics/core/collisions/broad_phase/: sweep_and_prune.cpp  uniform_grid.cpp
src/physics/core/collisions/narrow_phase/: collision_circle_circle.cpp  collision_circle_polygon.cpp  collision_circle_rectangle.cpp  collision_polygon_polygon.cpp  collision_rectangle_rectangle.cpp
src/physics/core/fluids/: coupled_fluid_simulation.cpp  fluid_boundary.cpp  fluid_particle.cpp  fluid_particle_spatial_grid.cpp  fluid_rigid_coupler.cpp  sph_kernels.cpp  wcsph_solver.cpp
src/physics/core/forces/: drag.cpp  gravity.cpp
src/physics/core/particles/: particle.cpp  particle_spatial_grid.cpp  particle_system.cpp
src/physics/math/: matrix2x2.cpp  vector2.cpp
src/wasm/: bindings.cpp
tests/: numerical_validation.cpp  test_broad_phase.cpp  test_broad_phase_differential.cpp  test_collision.cpp  test_collision_filter.cpp  test_collision_listener.cpp  test_collision_properties.cpp  test_contact_manifold.cpp  test_coupled_fluid_simulation.cpp  test_engine.cpp  test_fixed_step.cpp  test_fluid_boundaries.cpp  test_fluid_particles.cpp  test_fluid_physics_validation.cpp  test_fluid_rigid_coupling.cpp  test_forces.cpp  test_math.cpp  test_particles.cpp  test_physics_invariants.cpp  test_rigidbody.cpp  test_simulation.cpp  test_simulation_config.cpp  test_simulation_statistics.cpp  test_sph_kernels.cpp  test_stress.cpp  test_validation.cpp  test_wcsph_solver.cpp  test_world.cpp
tests/test_suite/: test_math.cpp  test_rigidbody.cpp
visualization/: CMakeLists.txt  QUICKSTART.md  README.md  build.bat  build.ps1  main.cpp  renderer.cpp  renderer.h  setup-and-build.ps1
